add dashboard and store setting
